--- a/index.html
+++ b/index.html
@@ -8,16 +8,26 @@
     <title>Document</title>
 </head>
 <body>
-    <div iv="container">
-        <div class="card">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                Excepturi, aliquam autem reiciendis, molestias illo voluptates tenetur neque maxime, nihil praesentium dolor dignissimos. 
-                Ipsam nesciunt exercitationem accusantium facere quos, ducimus nemo.</p>
+    <div class="container">
+        <div class="box one">
         </div>
-        <div class="card">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                Excepturi, aliquam autem reiciendis, molestias illo voluptates tenetur neque maxime, nihil praesentium dolor dignissimos. 
-                Ipsam nesciunt exercitationem accusantium facere quos, ducimus nemo.</p>
+        <div class="box three">
+        </div>
+        <div class="box one">
+        </div>
+
+        <div class="box two">
+        </div>
+        <div class="box one">
+        </div>
+        <div class="box two">
+        </div>
+
+        <div class="box three">
+        </div>
+        <div class="box three">
+        </div>
+        <div class="box two">
         </div>
     </div>
 
